--- a/style.css
+++ b/style.css
@@ -34,3 +34,9 @@ body {
 
 /* background-color: #739552; */
 /* background-color: #ebecd0; */
+
+.possibleMove{
+    filter: brightness(70%);
+    border-radius: 20px;
+}
+
